<resources>

    <string name="app_name">TesteBD</string>
    <string name="separador">-</string>
    <string name="title_activity_list_users">Cadastros salvos</string>
    <string name="novo">Novo Cadastro</string>
    <string name="cadastros">Consultar Cadastros</string>
    <string name="ficha_cadastro_unico">Ficha de Cadastro Único</string>
    <string name="id_usuario">Identificação do Usuário</string>
    <string name="inf_sociodem">Informações Sociodemográficas</string>
   	<string name="condicoes">Condições/Situações de saúde gerais</string>
   	<string name="salvar">Salvar</string>
   	<string name="editar">Editar</string>
   	<string name="cartao">*Nº Cartão Sus</string>
   	<string name="nome">*Nome</string>
   	<string name="social">*Nome social</string>
   	<string name="nascimento">*Data de nascimento</string>
   	<string name="nis">*Nis</string>
   	<string name="mae">*Nome da mãe</string>
   	<string name="pais">*País de nascimento</string>
   	<string name="municipio">*Município</string>
   	<string name="telefone">*Telefone</string>
   	<string name="email">*E-mail</string>
   	<string name="responsavel">É o responsável?</string>
   	<string name="sim">Sim</string>
   	<string name="nao">Não</string>
    <string name="conjugal">Situação conjugal</string>
	<string name="solteiro">Solteiro(a)</string>
	<string name="casado">Casado(a)/Convivio com parceiro</string>
	<string name="divorciado">Divorciado(a)/Separado(a)</string>
	<string name="viuvo">Viúvo(a)</string>
	<string name="outro">Outro(a)</string>	
	<string name="ocupacao">Ocupação</string>
	<string name="frequenta_escola">Frequenta escola?</string>
	<string name="curso_feito">Qual é o curso mais elevado que frequenta ou frequentou?</string>
	<string name="creche">Creche</string>
	<string name="pre_escola">Pré-Escola (exceto CA)</string>
	<string name="classe_alfabetizada">Classe alfabetizada - CA</string>
	<string name="fundamental1">Ensino Fundamental 1ª a 4ª séries</string>
	<string name="fundamental2">Ensino Fundamental 5ª a 8ª séries</string>
	<string name="fundamental_completo">Ensino Fundamental completo</string>
	<string name="fundamental_especial">Ensino Fundamental especial</string>
	<string name="fundamental_eja_inicial">Ensino Fundamental EJA - séries inicias</string>
	<string name="fundamental_eja_final">Ensino Fundamental EJA - séries finais</string>
	<string name="medio">Ensino Médio, Médio 2º Ciclo (Científico, técnico, etc.)</string>
	<string name="medio_especial">Ensino Médio Especial</string>
	<string name="medio_eja">Ensino Médio EJA (Supletivo)</string>
	<string name="superior">Superior, Aperfeiçoamento, Especialização, Mestrado, Doutorado</string>
	<string name="alfabetizacao_adultos">Alfabetização para adultos (Mobral, etc.)</string>
	<string name="nenhum">Nenhum</string>
	<string name="mercado_trabalho">SITUAÇÃO NO MERCADO DE TRABALHO</string>
	<string name="empregador">Empregador</string>
	<string name="assalariado_carteira">Assalariado com carteira de trabalho</string>
	<string name="assalariado_semcarteira">Assalariado sem carteira de trabalho</string>
	<string name="autonomo_prev">Autônomo com previdência social</string>
	<string name="autonomo_semprev">Autônomo sem previdência social</string>
	<string name="aposentado">Aposentado/Pensionista</string>
	<string name="desempregado">Desempregado</string>
	<string name="nao_trabalha">Não trabalha</string>
	<string name="criancas_guarda">CRIANÇAS DE 0 A 9 ANOS, COM QUEM FICA?</string>
	<string name="adulto_responsavel">Adulto responsável</string>
	<string name="outra_crianca">Outra(s) criança(s)</string>
	<string name="adolescente">Adolescente</string>
	<string name="sozinha">Sozinha</string>
	<string name="curandeiro">FREQUENTA CURANDEIRO(A)/BENZEDEIRA(O)?</string>
	<string name="grupo_comunitario">PARTICIPA DE ALGUM GRUPO COMUNITÁRIO?</string>
	<string name="plano_saude">POSSUI PLANO DE SAÚDE PRIVADO?</string>
	<string name="membro_comunidade">É MEMBRO DE POVO OU COMUNIDADE TRADICIONAL?</string>
	<string name="se_sim_qual">SE SIM, QUAL?</string>
	<string name="orientacao_sexual">DESEJA INFORMAR ORIENTAÇÃO SEXUAL/IDENTIDADE DE GÊNERO?</string>
	<string name="hetero">Heterossexual</string>
	<string name="gay">Gay</string>
	<string name="lesbica">Lésbica</string>
	<string name="bissexual">Bissexual</string>
	<string name="travesti">Travesti</string>
	<string name="transexual">Transsexual</string>
	<string name="deficiencia">TEM ALGUMA DEFICIÊNCIA?</string>
	<string name="auditiva">Auditiva</string>
	<string name="visual">Visual</string>
	<string name="intelectual">Intelectual/Cognitiva</string>
	<string name="fisica">Física</string>
	<string name="rua1">EM SITUAÇÃO DE RUA</string>
	<string name="alimentacao">Quantas vezes se alimenta ao dia?</string>
	<string name="umavez">1 vez</string>
	<string name="duasvezes">2 ou 3 vezes</string>
	<string name="tresmais">mais de 3 vezes</string>
	<string name="origemalimentacao">QUAL A ORIGEM DA ALIMENTAÇÃO?</string>
	<string name="respopular">Restaurante Popular</string>
	<string name="doacaores">Doação Restaurante</string>
	<string name="doacaoreligiao">Doação Grupo Religioso</string>
	<string name="doacaopopular">Doação Popular</string>
	<string name="outros">Outros</string>
	<string name="banho">Banho</string>
	<string name="sanitario">Acesso ao Sanitário</string>
	<string name="bucal">Higiene Bucal</string>
	<string name="higiene">TEM ACESSO A HIGIENE PESSOAL?</string>
    <string name="gestante">Está Gestante?</string>
	<string name="qual_maternidade">Se sim, qual é a maternidade de referência?</string>
	<string name="peso">Sobre seu peso, você se considera?</string>
	<string name="abaixo_peso">Abaixo do peso</string>
	<string name="ideal_peso">Peso adequado</string>
	<string name="acima_peso">Acima do peso</string>
	<string name="fumante">Está fumante?</string>
	<string name="alcool">Dependente/abusa de álcool?</string>
	<string name="nao_sabe">Não sabe</string>
	<string name="insuficiencia">Insuficiência Cardíaca</string>
	<string name="drogas">Dependente/abusa de drogas?</string>
	<string name="hipertensao">Tem hipertensão arterial?</string>
	<string name="diabetes">Tem diabetes?</string>
	<string name="derrame">Teve AVC/Derrame?</string>
	<string name="infarto">Teve infarto?</string>
	<string name="cardiaco">Tem doença cardíaca/do coração?</string>
	<string name="rins">Tem ou teve problema nos rins?</string>
	<string name="renal">Insuficiência renal</string>
	<string name="praticas">Usa outras práticas integrativas e complementares?</string>
	<string name="plantas">Usa plantas medicinais?</string>
	<string name="domiciliado">Está domiciliado?</string>
	<string name="acamado">Está acamado?</string>
	<string name="psiquiatra">Fez ou faz tratamento com psiquiatra ou teve internação por problema de saúde mental?</string>
	<string name="qual_causa">Se sim, qual a causa?</string>
	<string name="internacao">Teve alguma internação nos últimos 12 meses?</string>
	<string name="cancer">Teve ou tem câncer?</string>
	<string name="tuberculose">Está com tuberculose?</string>
	<string name="hanseniase">Está com hanseníase?</string>
	<string name="dpoc">DPOC/Enfisema</string>
	<string name="asma">ASMA</string>
	<string name="pulmao">Tem doença respiratória/no pulmão?</string>
	<string name="outras_condicoes">Outras condições de saúde</string>
	<string name="qual1">1-Qual?</string>
	<string name="qual2">2-Qual?</string>
	<string name="qual3">3-Qual?</string>
	<string name="sexo">Sexo:</string>
	<string name="masculino">Masculino</string>
	<string name="feminino">Feminino</string>
	<string name="obs_responsavel">(Caso não, preencha os dados do responsável a seguir:)</string>
	<string name="cor">Raça/Cor:</string>
	<string name="branca">Branca</string>
	<string name="preta">Preta</string>
	<string name="parda">Parda</string>
	<string name="amarela">Amarela</string>
	<string name="indigena">Indígena</string>
	<string name="nacionalidade">Nacionalidade:</string>
	<string name="brasileira">Brasileira</string>
	<string name="naturalizado">Naturalizado</string>
	<string name="estrangeiro">Estrangeiro</string>
	<string name="em_rua">Está em situação de rua?</string>
	<string name="obs_rua">Caso sim, prossiga com o questionário.</string>
	<string name="tempo_rua">Tempo em situação de rua:</string>
	<string name="meses6">menos de 6 meses</string>
	<string name="meses6a12">6 a 12 meses</string>
	<string name="anos1a5">1 a 5 anos</string>
	<string name="anos5"> mais de 5 anos</string>
	<string name="beneficio">Recebe algum benefício?</string>
	<string name="referencia">Possui referência familiar?</string>
	<string name="instituicao">É acompanhado por outra instituição?</string>
	<string name="visita">Visita algum familiar com frequência?</string>
	<string name="se_sim_qual_grau">Se sim, qual é o grau de parentesco?</string>
    
</resources>
